--- a/src/style/index.css
+++ b/src/style/index.css
@@ -27,6 +27,7 @@ body,
   background: white;
   color: #474747;
   font-size: 50px;
+  text-align: right;
 }
 .calc .input {
   display: grid;
@@ -41,6 +42,9 @@ body,
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
+  border-left: solid 2.5px #616161;
+  margin-left: 5px;
+  padding-left: 5px;
 }
 
 button {
