--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,6 +24,7 @@ body,
         background: rgb(255, 255, 255);
         color: rgb(71, 71, 71);
         font-size: 50px;
+        text-align: right;
     }
     .input{
         display: grid;
@@ -37,6 +38,9 @@ body,
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(4,1fr);
+            border-left: solid 2.5px rgb(97, 97, 97);
+            margin-left: 5px;
+            padding-left: 5px;
         }
     }
 }
