--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,6 +24,8 @@ body,
         background: rgb(255, 255, 255);
         color: rgb(71, 71, 71);
         font-size: 50px;
+        text-align: right;
+        word-break: break-all;
     }
     .input{
         display: grid;
@@ -37,6 +39,10 @@ body,
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(4,1fr);
+
+            border-left: solid 2px rgb(146, 146, 146);
+            margin-left: 3px;
+            padding-left: 3px;
         }
     }
 }
@@ -46,13 +52,14 @@ button{
     color: white;
     outline: none;
     border:solid 2px rgb(190, 190, 190);
-    border-radius: 5px;
     &:hover{
         background: rgb(180, 180, 180);
     }
     &:active{
         background: rgb(88, 88, 88);
-        opacity: 1;
+    }
+    &[disabled]{
+        opacity: 0.3;
     }
 }
 
